upload image link to database

--- a/views/templates/volreg.hbs
+++ b/views/templates/volreg.hbs
@@ -44,10 +44,10 @@
                             <div class="col-md-6">
                                 <div
                                     class="form-group position-relative my-4 d-flex justify-content-between align-items-start">
-                                    <label class="dob-label" name="dob" for="dob">Date of Birth
+                                    <label class="dob-label" for="dob">Date of Birth
                                         <sub class="text-danger float-right">*</sub></label>
 
-                                    <input type="date" class="dob-input" id="dob" required />
+                                    <input type="date" name="dob" class="dob-input" id="dob" required />
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group position-relative my-4">
-                                    <textarea type="textarea" name="pExperience" class="textarea anim"
+                                    <textarea type="textarea" name="preExperience" class="textarea anim"
                                         rows="3"></textarea><span class="highlight"></span><span class="bar"></span>
                                     <label class="label">Previous experience
                                     </label>
