add flash message for user

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,3 +158,11 @@ a.h-donate-btn:hover {
 input {
   font-size: 0.8rem !important;
 }
+
+/* Alert */
+.alert p {
+  font-size: 0.8rem;
+}
+.alert button {
+  padding-right: 5px !important;
+}
