--- a/views/templates/verify.hbs
+++ b/views/templates/verify.hbs
@@ -3,6 +3,16 @@
         <div class="col-4 m-auto">
             <div class="card">
                 <div class="card-body">
+                    {{#if flash}}
+                    <div class="alert alert-danger alert-dismissible fade show m-0 p-1" role="alert">
+                        <p class="m-0">
+                            {{ flash }}
+                        </p>
+                        <button type="button" class="close p-0" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {{/if}}
                     <p class="lead">Verify your account</p>
                     <form action="{{action}}" class="text-center" method="post">
                         <div class="form-group">
