--- a/views/templates/contact.hbs
+++ b/views/templates/contact.hbs
@@ -2,56 +2,42 @@
     <div class="container mt-5 mb-5">
         <div class="row no-gutters">
             <div class="col-md-6 left">
-                <h1>Contact us</h1>
-                <br />
-                <h3>We'd love to hear from you.</h3>
-                <br />
-                <h5>E-Gurukul has always been trying to be as much
-                    responsible we can. we will try out best to
-                    reach out to you in few hours
-                </h5>
+                <div class="content">
+                    <h1>Contact us</h1>
+                    <br />
+                    <h5>We'd love to hear from you.</h5>
+                    <br />
+                    <p class="lead">E-Gurukul has always been trying to be as much
+                        responsible we can. we will try out best to
+                        reach out to you in few hours
+                    </p>
+                </div>
+
             </div>
             <div class="col-md-6 right">
                 <div class="card-body">
-
-                    <div class="form-group position-relative my-4">
-
-                        {{> requiredInput name="firstname" type="text" label="First Name" className="input inline-input"}}
-
-                        {{!-- <input type="text" class="input" required="required" placeholder="Name" /><span
-                        class="highlight"></span><span class="bar"></span> --}}
-
-                    </div>
-                    <div class="form-group position-relative my-4">
+                    <form method="POST">
+                        {{> requiredInput name="fullname" type="text" label="Full Name" className="input inline-input"}}
 
                         {{> requiredInput name="email" type="email" label="Email" className="input inline-input"}}
-
-                        {{!-- <input type="email" class="input" required="required" placeholder="Email" /><span
-                        class="highlight"></span><span class="bar"></span> --}}
-
-                    </div>
-                    <div class="form-group position-relative my-4">
-
-                        {{> requiredInput name="phone" type="number" label="Phone number" className="input inline-input"}}
-
-                        {{!-- <input type="number" class="input" required="required" placeholder="Phone" /><span
-                        class="highlight"></span><span class="bar"></span> --}}
-
-                    </div>
-                    <div class="form-group position-relative my-4">
-
-                        {{> requiredInput name="message" type="text" label="Message" className="input inline-input"}}
-
-                        {{!-- <input type="text" class="input" required="required" placeholder="Message" /><span
-                        class="highlight"></span><span class="bar"></span> --}}
-
-                    </div>
-                    <div class="btn-box">
-                        <button class="button button-like">
-                            <i class="fa fa-heart"></i>
-                            <span>Submit</span>
-                        </button>
-                    </div>
+                        {{> requiredInput name="phone" type="rexr" label="Phone number" className="input inline-input"}}
+                        <div class="form-group position-relative my-4">
+                            <textarea type="textarea" name="message" class="textarea anim" rows="3"></textarea><span
+                                class="highlight"></span><span class="bar"></span>
+                            <label class="label">Your Message
+                            </label>
+                            <span class="highlight"></span>
+                            <span class="bar"></span>
+                            <label class="label">Your Message <sup class="text-danger">*</sup>
+                            </label>
+                        </div>
+                        <div class="btn-box">
+                            <button class="button button-like" type="submit">
+                                <i class="fa fa-heart fa-2x"></i>
+                                <span>Submit</span>
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
