fix add new student page

--- a/views/templates/addNewStudent.hbs
+++ b/views/templates/addNewStudent.hbs
@@ -1,8 +1,8 @@
 <div class="container p-5">
     <div class="row">
-        <div class="col-md-7 m-auto form-wrapper">
+        <div class="col-md-6 m-auto form-wrapper">
             <h1 class="activities-title text-center mb-5">
-                New students entry
+                New student entry
             </h1>
 
             <form class="activites">
