--- a/public/css/activites.css
+++ b/public/css/activites.css
@@ -1,3 +1,9 @@
+.main-wrapper {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(-45deg, #f8f8ff 51%, #fe4e66 51%, #fc9d9a 100%);
+  background-attachment: fixed;
+}
+
 /* Main wrapper */
 .form-wrapper {
   background-color: #f5f5f5;
