--- a/views/templates/addNewStudent.hbs
+++ b/views/templates/addNewStudent.hbs
@@ -4,30 +4,10 @@
             <h1 class="activities-title text-center mb-5">
                 New student entry
             </h1>
-
             <form class="activites">
+                {{> requiredInput name="fullname" type="text" label="Full Name" className="input inline-input"}}
+                {{> requiredInput name="guardian" type="text" label="Guardian name" className="input inline-input"}}
                 <div class="form-group position-relative my-4">
-                    {{> requiredInput name="firstname" type="text" label="First Name" className="input inline-input"}}
-
-                    {{!-- <input type="text" class="input" required="required"
-                                /><span
-                                class="highlight"></span><span class="bar"></span>
-                            <label>Name</label> --}}
-                </div>
-
-                <div class="form-group position-relative my-4">
-
-                    {{> requiredInput name="gardian" type="text" label="Guardian name" className="input inline-input"}}
-
-                    {{!-- <input type="text" class="input" required="required" /><span class="highlight"></span><span
-                        class="bar"></span>
-                    <label>Guardian name</label> --}}
-                </div>
-
-                <div class="form-group position-relative my-4">
-
-                    {{!-- {{> requiredInput name="dob" type="text" label="Date of birth" onfocus="(this.type='date')"
-                        onfocusout="(this.type='text')" className="input inline-input"}} --}}
 
                     <input type="text" class="input" for="dob" required="required" onfocus="(this.type='date')"
                         onfocusout="(this.type='text')" /><span class="highlight"></span><span class="bar"></span>
@@ -38,47 +18,23 @@
                     <div class="row ">
                         <group class="inline-radio">
                             <div>
-                                <input type="radio" name="gender" checked /><label>Female</label>
+                                <input type="radio" name="gender" value="female" checked /><label>Female</label>
                             </div>
                             <div>
-                                <input type="radio" name="gender" /><label>Male</label>
+                                <input type="radio" name="gender" value="male" /><label>Male</label>
                             </div>
                             <div>
-                                <input type="radio" name="gender" /><label>Others</label>
+                                <input type="radio" name="gender" value="others" /><label>Others</label>
                             </div>
                         </group>
                     </div>
                 </div>
-                <div class="form-group position-relative my-4">
-                    {{> requiredInput name="location" type="text" label="Location" className="input inline-input"}}
 
-                    {{!-- <input type="text" class="input" required="required" /><span class="highlight"></span><span
-                        class="bar"></span>
-                    <label>Location</label> --}}
-                </div>
+                {{> requiredInput name="location" type="text" label="Location" className="input inline-input"}}
+                {{> requiredInput name="study" type="text" label="Study status" className="input inline-input"}}
+                {{> requiredInput name="email" type="email" label="Email" className="input inline-input"}}
 
                 <div class="form-group position-relative my-4">
-                    {{> requiredInput name="study" type="text" label="Study status" className="input inline-input"}}
-
-
-                    {{!-- <input type="text" class="input" required="required" /><span class="highlight"></span><span
-                        class="bar"></span>
-                    <label>Study status</label> --}}
-                </div>
-
-                <div class="form-group position-relative my-4">
-                    {{> requiredInput name="email" type="email" label="Email" className="input inline-input"}}
-
-
-                    {{!-- <input type="email" class="input" required="required" /><span class="highlight"></span><span
-                        class="bar"></span>
-                    <label>Email</label> --}}
-                </div>
-
-                <div class="form-group position-relative my-4">
-                    {{!-- {{> requiredInput name="profile" type="file" label="Profile picture" className="input inline-input"}} --}}
-
-
                     <input type="text" class="input" required="required" onfocus="(this.type='file')"
                         onfocusout="(this.type='text')" /><span class="highlight"></span><span class="bar"></span>
                     <label>Profile picture</label>
