--- a/views/templates/donate.hbs
+++ b/views/templates/donate.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid donate-container">
+<div class="container-fluid donate-container p-2">
     <div class="col-md-7 m-auto">
         <div class="form-wrapper">
             <h2 class=" text-center ">
