--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -52,6 +52,14 @@
                     <li class="nav-item">
                         <a class="nav-link h-a" href="/stories">Stories</a>
                     </li>
+                    {{#if voLogged}}
+                    <li class="nav-item active">
+                        <a class="nav-link h-a" href="/add-activity">Add activity</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link h-a" href="/add-student">Add Student</a>
+                    </li>
+                    {{/if}}
                     {{#if logged}}
                     <li class="nav-item">
                         <a class="nav-link h-a" href="/logout">Logout</a>
@@ -82,6 +90,8 @@
                         </div>
                     </li>
                     {{/if}}
+
+
 
 
                     <li class="nav-item active">
