--- a/views/templates/vollogin.hbs
+++ b/views/templates/vollogin.hbs
@@ -20,7 +20,18 @@
 
                     <!--right side form-->
                     <div class="col-md-6 p-0">
+
                         <div class="form-wrapper">
+                            {{#if flash}}
+                            <div class="alert alert-danger alert-dismissible fade show m-0 p-1" role="alert">
+                                <p class="m-0">
+                                    {{ flash }}
+                                </p>
+                                <button type="button" class="close p-0" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            {{/if}}
                             <h2 class=" text-center ">
                                 Login to<span class="pinks">Your Account</span>
                             </h2>
