--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link h-a" href="/aboutus">About Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link h-a" href="/activites">Activites</a>
+                    </li>
                 </ul>
 
                 <ul class="navbar-nav">
