--- a/views/templates/add-activities.hbs
+++ b/views/templates/add-activities.hbs
@@ -3,15 +3,25 @@
     <div class="row">
       <div class="col-md-6 m-auto">
         <div class="form-wrapper">
+          {{#if flash}}
+          <div class="alert alert-danger alert-dismissible fade show m-0 p-1" role="alert">
+            <p class="m-0">
+              {{ flash }}
+            </p>
+            <button type="button" class="close p-0" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {{/if}}
           <h1 class="activities-title text-center mb-5">
             Add activites for students
           </h1>
 
-          <form class="activites">
+          <form class="activites" action="/activites" method="post" enctype="multipart/form-data">
             {{> requiredInput type="text" name="activity_name" className="input inline-input" label="Activites Name"}}
             <div class="form-group position-relative my-4">
-              <input class="input" list="activity_type_datalist" type="text" name="activity_type" id="activity_type"
-                required />
+              <input class="input anim" list="activity_type_datalist" type="text" name="activity_type"
+                id="activity_type" required />
               <span class="highlight"></span>
               <span class="bar"></span>
               <label>Activites Type <sup class="text-danger">*</sup></label>
@@ -25,16 +35,16 @@
             </div>
             <div class="form-group position-relative my-4 mb-5">
               <div class="custom-file">
-                <input type="file" class="custom-file-input" id="activity_img" />
+                <input type="file" class="custom-file-input" name="activity_img" id="activity_img" />
                 <label class="custom-file-label" for="activity_img">Activity's Image <sup
                     class="text-danger">*</sup></label>
               </div>
             </div>
 
-            {{> requiredInput type="text" name="activity_link" className="input inline-input ac-link" label="Activites Link"}}
+            {{> inputs type="text" name="activity_link" className="input inline-input ac-link" label="Activites Link"}}
 
             <div class="form-group position-relative my-4">
-              <textarea type="textarea" class="textarea" rows="3" required></textarea><span
+              <textarea type="textarea" class="textarea anim" name="activity_details" rows="3" required></textarea><span
                 class="highlight"></span><span class="bar"></span>
               <label>Activity Details <sup class="text-danger">*</sup></label>
             </div>
