--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,11 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Ubuntu|Roboto+Slab&display=swap");
-
-*,
-:before,
-:after {
-  box-sizing: border-box;
-}
-
 body {
   font-family: "Roboto Slab", serif;
   font-size: 10px;
@@ -22,9 +14,7 @@ body {
     #642b73
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-.container {
-  width: 100%;
-  height: 400px;
+.profile {
   background: #eecda3; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to bottom,
@@ -36,26 +26,10 @@ body {
     #ef629f,
     #eecda3
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  padding: 2rem 0.5rem;
 }
 
-.btn {
-  background: #fff;
-  color: #000;
-  border: none;
-  padding: 0.8rem 3rem;
-  border-radius: 2rem;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  text-decoration: none;
-  outline: none;
-  box-shadow: 0 1px 3px rgba(236, 110, 173, 0.562),
-    0 1px 2px rgba(236, 110, 173, 0.575);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-.btn:hover {
-  color: #8b8b8b;
-  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
-}
 .btn.btn-remove {
   background: #6b0073;
   background: -webkit-linear-gradient(to right bottom, #ec6ead, #6b0073);
@@ -66,6 +40,16 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: #fff;
+  border: none;
+  padding: 0.8rem 3rem;
+  border-radius: 2rem;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(236, 110, 173, 0.562),
+    0 1px 2px rgba(236, 110, 173, 0.575);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .btn.btn-remove:hover {
   background: #6b0073;
@@ -81,8 +65,13 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: #deeffd;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
 }
 .btn-box {
   text-align: center;
   margin: 1rem 0;
+}
+
+.user-img {
+  border-radius: 1rem;
 }
