edit for student

--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -55,10 +55,10 @@
                     <li class="nav-item">
                         <a class="nav-link h-a" href="/stories">Stories</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link h-a" href="/contactus">Contact Us </a>
-                    </li>
                     {{#if voLogged}}
+                    <li class="nav-item active">
+                        <a class="nav-link h-a" href="/students">Students</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <div class="dropdown">
                             <button class="btn dropdown-toggle" type="button" id="userDropDown" data-toggle="dropdown"
@@ -115,6 +115,9 @@
                         </div>
                     </li>
                     {{/if}}
+                    <li class="nav-item active">
+                        <a class="nav-link h-a" href="/contactus">Contact Us </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link h-a h-donate-btn" href="/donate">Donate</a>
                     </li>
