--- a/views/templates/students.hbs
+++ b/views/templates/students.hbs
@@ -13,7 +13,9 @@
                     <h6 class="card-text text-secondary"><strong class="text-dark">Study:</strong> {{ this.study }}</h6>
                 </div>
                 <div class="card-footer">
-                    <a href="students/{{this._id}}" class="stretched-link">Details</a>
+                    <a href="students/{{this._id}}" class="text-primary" style="font-size: 1rem">Details</a>
+                    <a href="students/edit/{{this._id}}" class="float-right"><i
+                            class="fas fa-user-edit fa-2x text-info"></i></a>
                 </div>
             </div>
         </div>
