--- a/views/templates/students.hbs
+++ b/views/templates/students.hbs
@@ -12,8 +12,11 @@
                     <h6 class="card-text text-secondary"><strong class="text-dark">DOB:</strong> {{ this.dob }}</h6>
                     <h6 class="card-text text-secondary"><strong class="text-dark">Study:</strong> {{ this.study }}</h6>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer d-flex justify-content-between align-items-center">
                     <a href="students/{{this._id}}" class="text-primary" style="font-size: 1rem">Details</a>
+                    <a href="students/report/{{this._id}}" class="text-primary" style="font-size: 1rem"
+                        data-toggle="tooltip" data-placement="top" title="Add report for this student"><i
+                            class="fas fa-info-circle"></i></a>
                     <a href="students/edit/{{this._id}}" class="float-right"><i
                             class="fas fa-user-edit fa-2x text-info"></i></a>
                 </div>
