add delete for profile

--- a/views/templates/profile.hbs
+++ b/views/templates/profile.hbs
@@ -28,7 +28,8 @@
 
 
                             <div class="btn-box">
-                                <button class="btn btn-remove" type="remove" data-target="{{id}}">
+                                <button class="btn btn-remove rem-profile" type="remove" data-route="{{route}}"
+                                    data-id="{{id}}">
                                     Remove Profile
                                 </button>
                             </div>
