--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -52,9 +52,9 @@
                 </ul>
 
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    {{!-- <li class="nav-item">
                         <a class="nav-link h-a" href="/stories">Stories</a>
-                    </li>
+                    </li> --}}
                     {{#if voLogged}}
                     <li class="nav-item active">
                         <a class="nav-link h-a" href="/students">Students</a>
